# certificate-check

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
app/: main.py
app/api/: routes.py
app/config/: settings.py
app/core/: logging.py
app/models/: certificate.py
app/services/: certificate_service.py
app/static/: index.html
tests/: conftest.py  test_certificate_service.py
